Rebuild UserDetailSystem